# tp-semester-project

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  README.md  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  apiclient_8cpp__incl.md5  apiclient_8h.html  apiclient_8h__dep__incl.map  apiclient_8h__dep__incl.md5  apiclient_8h__incl.md5  apiprotocol_8cpp.html  apiprotocol_8cpp.js  apiprotocol_8h.js  apiprotocol_8h__dep__incl.map  apiprotocol_8h__dep__incl.md5  apiprotocol_8h__incl.md5  class_api_client-members.html  class_api_client.js  class_api_client__inherit__graph.map  class_api_client__inherit__graph.md5  class_command_line_client.html  class_database_manager-members.html  class_database_manager.js  class_game_board.js  class_game_manager-members.html  class_game_manager.js  class_main_window-members.html  class_main_window.html  class_server_application-members.html  classes.html  client_2main_8cpp.html  commandlineclient_8cpp.html  commandlineclient_8cpp__incl.map  commandlineclient_8cpp__incl.md5  (+83 more)
.github/workflows/: deploy-docs.yml
docs/: api.md
docs/html/: annotated_dup.js  api_8md.html  apiclient_8cpp.html  apiclient_8cpp__incl.map  apiclient_8h__incl.map  apiclient_8h_source.html  apiprotocol_8cpp__incl.map  apiprotocol_8cpp__incl.md5  apiprotocol_8h.html  apiprotocol_8h__incl.map  apiprotocol_8h_source.html  class_api_client.html  class_command_line_client-members.html  class_command_line_client.js  class_command_line_client__coll__graph.md5  class_command_line_client__inherit__graph.map  class_database_manager.html  class_game_board-members.html  class_game_board.html  class_game_manager.html  class_server_application.html  class_server_application.js  class_server_application__coll__graph.map  class_server_application__coll__graph.md5  client_2main_8cpp__incl.map  client_2main_8cpp__incl.md5  commandlineclient_8h.html  commandlineclient_8h.js  commandlineclient_8h__dep__incl.map  commandlineclient_8h_source.html  databasemanager_8cpp.html  databasemanager_8cpp__incl.map  databasemanager_8cpp__incl.md5  databasemanager_8h.html  databasemanager_8h__incl.map  databasemanager_8h_source.html  dir_000003_000005.html  dir_000008_000005.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_075bb3ff235063c77951cd176d15a741.js  (+83 more)
docs/html/search/: all_11.js  all_13.js  all_14.js  all_1c.js  all_1d.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_7.js  enums_0.js  enumvalues_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_7.js  functions_1.js  functions_3.js  functions_5.js  functions_7.js  functions_a.js  functions_b.js  pages_1.js  pages_13.js  pages_5.js  pages_6.js  pages_7.js  pages_8.js  pages_9.js  pages_a.js  (+8 more)
docs/latex/: _c_make_c_x_x_compiler_id_8cpp.tex  annotated.tex  api_8md.tex  apiclient_8cpp.tex  apiclient_8cpp__incl.md5  apiclient_8h.tex  apiclient_8h__dep__incl.md5  apiclient_8h__incl.md5  apiclient_8h_source.tex  apiprotocol_8cpp.tex  apiprotocol_8cpp__incl.md5  apiprotocol_8h.tex  apiprotocol_8h__dep__incl.md5  apiprotocol_8h__incl.md5  apiprotocol_8h_source.tex  class_api_client.tex  class_api_client__coll__graph.md5  class_command_line_client.tex  class_command_line_client__inherit__graph.md5  class_database_manager.tex  class_game_board.tex  class_game_manager.tex  class_main_window.tex  class_server_application.tex  class_server_application__inherit__graph.md5  client_2main_8cpp.tex  client_2main_8cpp__incl.md5  commandlineclient_8cpp.tex  commandlineclient_8cpp__incl.md5  commandlineclient_8h.tex  commandlineclient_8h__dep__incl.md5  commandlineclient_8h__incl.md5  commandlineclient_8h_source.tex  databasemanager_8cpp.tex  databasemanager_8cpp__incl.md5  databasemanager_8h.tex  databasemanager_8h__dep__incl.md5  databasemanager_8h__incl.md5  databasemanager_8h_source.tex  dir_075bb3ff235063c77951cd176d15a741.tex  (+59 more)
search/: all_1.js  all_10.js  all_12.js  all_16.js  all_18.js  all_1f.js  all_21.js  all_22.js  all_7.js  all_9.js  classes_0.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  enumvalues_1.js  files_0.js  functions_0.js  functions_2.js  functions_4.js  functions_6.js  functions_8.js  functions_9.js  functions_c.js  functions_d.js  functions_e.js  functions_f.js  namespaces_0.js  pages_0.js  pages_11.js  pages_16.js  pages_17.js  pages_2.js  pages_3.js  pages_4.js  pages_c.js  pages_d.js  pages_e.js  searchdata.js  typedefs_0.js  (+4 more)
src/client/: CMakeLists.txt  apiclient.cpp  apiclient.h  boardwidget.cpp  boardwidget.h  commandlineclient.cpp  commandlineclient.h  gamesqare.cpp  gamesqare.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/common/: CMakeLists.txt  apiprotocol.cpp  apiprotocol.h  fleetutils.cpp  fleetutils.h
src/server/: CMakeLists.txt  databasemanager.cpp  databasemanager.h  gameboard.cpp  gameboard.h  gamemanager.cpp  gamemanager.h  main.cpp  serverapplication.cpp  serverapplication.h
src/server/migrations/: 001_create_users.sql  002_create_user_stats.sql  003_create_user_stats_trigger.sql  004_create_user_statistics_view.sql
